--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>3日限定メモ</title>
+    <title>3日ノート</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -22,7 +22,7 @@
 </head>
 <body class="custom-bg min-h-screen">
     <div class="container mx-auto px-4 py-8 max-w-3xl">
-        <h1 class="text-3xl font-bold text-blue-800 mb-8">3日限定メモ</h1>
+        <h1 class="text-3xl font-bold text-blue-800 mb-8">3日ノート</h1>
         
         <div class="bg-yellow-100 rounded-lg shadow-lg p-6 mb-6 custom-hover">
             <textarea 
